[gd_scene load_steps=15 format=3 uid="uid://dfoqkslrerma8"]

[ext_resource type="Script" path="res://translated_actor/Scene/player/camera_rig.gd" id="1_1m474"]
[ext_resource type="Script" path="res://translated_actor/Scene/player/player_camera.gd" id="2_iurip"]
[ext_resource type="Script" path="res://translated_actor/Scene/player/stay_within_distance.gd" id="3_1yqgb"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="4_ksjm8"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="5_mtply"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="6_rn048"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="7_y7nfl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_j4v6i"]
radius = 0.621

[sub_resource type="SphereShape3D" id="SphereShape3D_ykfm2"]
radius = 0.015

[sub_resource type="SphereShape3D" id="SphereShape3D_uvdps"]
radius = 0.08

[sub_resource type="SphereShape3D" id="SphereShape3D_qn8lj"]
radius = 0.24

[sub_resource type="Resource" id="Resource_2dvqy"]
script = ExtResource("5_mtply")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_juwtv"]
script = ExtResource("6_rn048")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
fov = 75.0

[sub_resource type="SphereShape3D" id="SphereShape3D_t4boq"]
radius = 0.625

[node name="CameraRig" type="Node3D" groups=["camerarig"]]
top_level = true
script = ExtResource("1_1m474")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36937, 0)
update_position = false
update_rotation = false
update_scale = false

[node name="Outer" type="Node3D" parent="RemoteTransform3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.46902, 0.424561)

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3771, 0.0865502)
top_level = true
shape = SubResource("SphereShape3D_j4v6i")
spring_length = 3.175

[node name="Camera" type="Node3D" parent="SpringArm3D" node_paths=PackedStringArray("remote", "outer", "cam")]
transform = Transform3D(0.625, 1.77636e-15, -5.32907e-15, -3.55271e-15, 0.625, 2.98023e-08, -3.55271e-15, -2.98023e-08, 0.625, 0, 0, 0)
script = ExtResource("2_iurip")
remote = NodePath("../../RemoteTransform3D")
outer = NodePath("../../RemoteTransform3D/Outer")
cam = NodePath("../../Node3D")

[node name="RayCast3D5" type="ShapeCast3D" parent="SpringArm3D/Camera"]
transform = Transform3D(0.295, -2.34201e-15, 3.51302e-15, 2.34201e-15, 0.295, -1.96462e-08, -3.51302e-15, 1.96462e-08, 0.295, 2.92099e-15, -2.38419e-07, 0.342578)
shape = SubResource("SphereShape3D_ykfm2")
target_position = Vector3(0, 0, 0.5)

[node name="RayCast3D" type="ShapeCast3D" parent="SpringArm3D/Camera/RayCast3D5"]
transform = Transform3D(1.83, -1.12698e-09, -1.01632e-09, 1.14607e-09, 1.82967, 0.0347163, 9.94753e-10, -0.0347163, 1.82967, 0, 0, 0)
shape = SubResource("SphereShape3D_uvdps")
target_position = Vector3(1, 0, -0.27)

[node name="RayCast3D2" type="ShapeCast3D" parent="SpringArm3D/Camera/RayCast3D5"]
transform = Transform3D(1.83, -1.12698e-09, -1.01632e-09, 1.14607e-09, 1.82967, 0.0347163, 9.94753e-10, -0.0347163, 1.82967, 0, 0, 0)
shape = SubResource("SphereShape3D_uvdps")
target_position = Vector3(-1, 0, -0.27)

[node name="RayCast3D3" type="ShapeCast3D" parent="SpringArm3D/Camera/RayCast3D5"]
transform = Transform3D(0.0782668, -0.996514, 0.0288814, 0.904174, 0.0587517, -0.423105, 0.419934, 0.0592289, 0.90562, 0, 0, 0)
shape = SubResource("SphereShape3D_uvdps")
target_position = Vector3(1, 0, -1.23)

[node name="RayCast3D4" type="ShapeCast3D" parent="SpringArm3D/Camera/RayCast3D5"]
transform = Transform3D(0.00638802, -0.999461, 0.032212, 0.936477, -0.00531702, -0.350689, 0.350671, 0.032406, 0.935938, 0, 0, 0)
shape = SubResource("SphereShape3D_uvdps")
target_position = Vector3(-1, 0, -1.23)

[node name="Node3D" type="CharacterBody3D" parent="." node_paths=PackedStringArray("following", "outer_following", "player_cam", "cam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3.8009, 4.08418)
top_level = true
collision_layer = 0
script = ExtResource("3_1yqgb")
following = NodePath("../SpringArm3D/Camera/RayCast3D5")
outer_following = NodePath("../RemoteTransform3D/Outer")
player_cam = NodePath("../SpringArm3D/Camera")
cam = NodePath("PhantomCamera3D2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D"]
shape = SubResource("SphereShape3D_qn8lj")

[node name="PhantomCamera3D2" type="Node3D" parent="Node3D" node_paths=PackedStringArray("look_at_targets")]
transform = Transform3D(0.971777, -0.072193, 0.219228, 0, 0.949878, 0.312137, -0.230764, -0.304014, 0.923199, 0, 0, 0.213501)
script = ExtResource("4_ksjm8")
priority = 1
look_at_mode = 3
look_at_targets = [NodePath("../../SpringArm3D")]
tween_resource = SubResource("Resource_2dvqy")
camera_3d_resource = SubResource("Resource_juwtv")
follow_offset = Vector3(0, 0.7, 1.745)
follow_damping_value = Vector3(0.025, 0.1, 0.025)
follow_distance = 0.455
dead_zone_width = 0.565
dead_zone_height = 0.344
spring_length = 0.455
look_at_damping_value = 0.26

[node name="RayCast3D" type="ShapeCast3D" parent="Node3D"]
shape = SubResource("SphereShape3D_t4boq")
max_results = 1

[node name="Camera3D" type="Camera3D" parent="." groups=["camera"]]
transform = Transform3D(0.971777, -0.072193, 0.219228, 0, 0.949878, 0.312137, -0.230764, -0.304014, 0.923199, 1, 3.8009, 4.29768)
top_level = true

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
script = ExtResource("7_y7nfl")
